--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "multer": "^1.4.2",
     "mysql": "github:mysqljs/mysql",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
