--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.17.1",
     "multer": "^1.4.2",
     "mysql": "github:mysqljs/mysql",
+    "nodemailer": "^4.7.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
