--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-bearer-token": "^2.4.0",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql": "github:mysqljs/mysql",
     "nodemailer": "^4.7.0",
