--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.17.1",
     "express-bearer-token": "^2.4.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "multer": "^1.4.2",
     "mysql": "github:mysqljs/mysql",
     "nodemailer": "^4.7.0",
